# async_import_plugin

./: Cargo.toml  package-lock.json  package.json  readme.md  swc-chunk-pos.json
src/: lib.rs
src/shared/: structs.rs
tests/: fixture.rs  map.json
tests/fixture/mixed/: input.tsx  output.tsx
