[package]
name = "s1s_async_import_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde_json       = "1.0.117"
swc_common       = { version = "0.36.0", features = ["concurrent"] }
swc_core         = { version = "0.99.2", features = ["ecma_plugin_transform"] }
swc_ecma_ast     = "0.117.0"
swc_ecma_utils   = "0.133.1"
swc_ecma_visit   = "0.103.1"
swc_plugin_macro = "0.9.16"
swc_ecma_parser             = "0.148.0"
swc_ecma_transforms_base    = "0.143.1"
swc_ecma_transforms_testing = "0.146.0"
testing                     = "0.38.0"
tracing          = { version = "0.1.40", features = ["release_max_level_off"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
