[package]
name = "s1s_async_import_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
serde          = { version = "1", features = ["derive"] }
serde_json       = "1"
swc_atoms      = "0.6.5"
swc_cached     = "0.3.19"
swc_common       = { version = "0.33.25", features = ["concurrent"] }
swc_core         = { version = "0.91.0", features = ["ecma_plugin_transform"] }
swc_ecma_ast     = "0.113.0"
swc_ecma_utils   = "0.128.0"
swc_ecma_visit   = "0.99.0"
swc_plugin_macro = "0.9.16"
tracing          = { version = "0.1.37", features = ["release_max_level_off"] }

[dev-dependencies]
swc_ecma_parser             = "0.144.0"
swc_ecma_transforms_base    = "0.138.0"
swc_ecma_transforms_testing = "0.141.0"
testing                     = "0.35.23"

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
